[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/PlayerSpritesheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/cannon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/energy_progress.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/energy_empty.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/UI/arrow.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/best_cannon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Audio/Sounds/dash.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/Sounds/rebound.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/Sounds/flap.wav" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 64.4981

[sub_resource type="Animation" id=2]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.0490365, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 224, 216 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 2 )

[node name="LaunchSprites" type="Node2D" parent="."]
position = Vector2( 224, 8 )

[node name="PowerGauge" type="Node2D" parent="LaunchSprites"]
visible = false
position = Vector2( 0, 40 )
rotation = -1.5708
z_index = 2

[node name="TextureProgress" type="TextureProgress" parent="LaunchSprites/PowerGauge"]
margin_right = 128.0
margin_bottom = 40.0
value = 20.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionGauge" type="Node2D" parent="LaunchSprites"]
visible = false
z_index = 2

[node name="arrow" type="Sprite" parent="LaunchSprites/DirectionGauge"]
position = Vector2( 160, 0 )
texture = ExtResource( 6 )

[node name="cannon" type="Sprite" parent="."]
position = Vector2( 0, 24 )
texture = ExtResource( 3 )
offset = Vector2( 80, -80 )

[node name="ThrowPoint" type="Node2D" parent="cannon"]
position = Vector2( 184, -96 )

[node name="cannon2" type="Sprite" parent="."]
position = Vector2( 0, 24 )
texture = ExtResource( 7 )
offset = Vector2( 80, -80 )

[node name="ThrowPoint" type="Node2D" parent="cannon2"]
position = Vector2( 184, -96 )

[node name="SoundEffects" type="Node" parent="."]

[node name="Dash" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 8 )
bus = "SoundEffects"

[node name="Rebound" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 9 )
bus = "SoundEffects"

[node name="Flap" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 10 )
bus = "SoundEffects"
